unix: Add proper locking for winch registering
The locking wasn't coorect for multi-threaded handling.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio_os_funcs.3
+++ b/man/gensio_os_funcs.3
@@ -364,6 +364,8 @@ function sets the function to call when a console window size change
 is requested by the operating system (SIGWINCH on Unix).  It will supply
 the new size parameters.  Set
 .B handler
+and
+.B console_iod
 to
 .B NULL
 to disable.  Note that the handler will be called with current window
