tools:gtlsshd: Add a way to specify the pam service name
This was it can be set to authenticate as something else, like sshd.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/tools/gtlsshd.8
+++ b/tools/gtlsshd.8
@@ -92,6 +92,9 @@ use to find the rules.  This will allow 2-factor auth to be done on a
 certificate login, as the given set of rules can be written to only
 do the second factor authentication part.
 .TP
+.I \-\-pam\-service <name>
+Use the given name for the pam service, instead of using the program's name.
+.TP
 .I \-\-oneshot
 Do not fork the program at the beginning or when a connection is
 received.  This allows easier debugging of the program.
