tools:gtlssh: Change config directory location on Windows
By default the config directory on Windows is now relative to the
executable location, with ../etc/gtlssh.  So if it's installed in
/Gensio/bin/gtlsshd, the config directory is /Gensio/etc/gtlssh.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/tools/gtlssh-keygen.1
+++ b/tools/gtlssh-keygen.1
@@ -87,7 +87,9 @@ Default keys go here.
 .TP
 .I \-\-keydir dir
 Location to put the non-default generated keys.  Default is
-$HOME/.gtlssh/keycerts
+$HOME/.gtlssh/keycerts for user certificates.  For server certificates
+it is in sysconfdir (generally /etc) /gtlssh on Unix.  On Windows
+it is the directory of the executable /../etc.
 .TP
 .I \-\-commonname name
 Set the common name in the certificate.  The default is your username
