--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -437,16 +437,16 @@ the values together.
 GENSIO_CONTROL_SER_MODEMSTATE
 .br
 sets the modem control lines that are reported.  Values to or together
-are: GENSIO_MODEMSTATE_CTS, GENSIO_MODEMSTATE_DSR,
-GENSIO_MODEMSTATE_RI, GENSIO_MODEMSTATE_CD.
+are: GENSIO_SER_MODEMSTATE_CTS, GENSIO_SER_MODEMSTATE_DSR,
+GENSIO_SER_MODEMSTATE_RI, GENSIO_SER_MODEMSTATE_CD.
 
 GENSIO_CONTROL_SER_LINESTATE
 .br
 sets the line states (errors) that are reported.  Values to or
-together are: GENSIO_LINESTATE_DATA_READY, GENSIO_LINESTATE_OVERRUN_ERR,
-GENSIO_LINESTATE_PARITY_ERR, GENSIO_LINESTATE_FRAMING_ERR,
-GENSIO_LINESTATE_BREAK, GENSIO_LINESTATE_XMIT_HOLD_EMPTY,
-GENSIO_LINESTATE_XMIT_SHIFT_EMPTY, GENSIO_LINESTATE_TIMEOUT_ERR.
+together are: GENSIO_SER_LINESTATE_DATA_READY, GENSIO_SER_LINESTATE_OVERRUN_ERR,
+GENSIO_SER_LINESTATE_PARITY_ERR, GENSIO_SER_LINESTATE_FRAMING_ERR,
+GENSIO_SER_LINESTATE_BREAK, GENSIO_SER_LINESTATE_XMIT_HOLD_EMPTY,
+GENSIO_SER_LINESTATE_XMIT_SHIFT_EMPTY, GENSIO_SER_LINESTATE_TIMEOUT_ERR.
 
 .SS "OTHER SERIAL PORT OPERATIONS"
 This is a set of other operations that can be performed on a serial port.
