--- a/man/sergensio.5
+++ b/man/sergensio.5
@@ -2,6 +2,13 @@
 .SH NAME
 sergensio \- How to use a serial gensio
 .SH DESCRIPTION
+.B NOTE:
+sergensio is deprecated, the functionality for it is not done with the
+.B acontrol()
+and
+.B control()
+functions in the main gensio type.
+
 A
 .BR sergensio
 object is a type of gensio that provides serial port functions.  It
