man: gensio_acontrol doesn't take a pointer to length
Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio_control.3
+++ b/man/gensio_control.3
@@ -20,7 +20,7 @@ gensio_control \- Perform gensio-specific actions
 .br
 .B                    unsigned int option,
 .br
-.B                    char *data, gensiods *datalen,
+.B                    char *data, gensiods datalen,
 .br
 .B                    gensio_control_done done, void *cb_data,
 .br
