serialdev: Fix some issues with hangup-when-done
This option really wasn't working.  On Unix, it would restore the
original termios and close, so the setting would have no effect.  It
wasn't implemented on Windows.

Modify the way it works so the default is -1, which means don't modify
the value.  Whatever the default is is what will happen.  If you set it
to true or false on Unix, it will modify the value after the device is
closed, because there's no other way to do it.

Windows is now fixed so that if you set this it will drop DTR and RTS on
close if set.  Otherwise it has no effect.

Also, the default is renamed to match the parameter name.

Signed-off-by: Corey Minyard <minyard@acm.org>

--- a/man/gensio.5
+++ b/man/gensio.5
@@ -743,7 +743,13 @@ section above for notes on ordering of lines.
 .TP
 .B hangup-when-done[=true|false]
 Lower/don't lower the modem control lines when the gensio is closed.
-The default is to not lower the modem control lines on close (false).
+The default is not modify the value.  On Unix, this will modify HUPCL
+value set on the termios after close, because there's no other real
+way to do that.  On Windows, it will clear DTR and RTS on close.
+
+On the default for this, it's a integer, -1 means don't set the value,
+0 means turn off, 1 means turn on.
+.TP
 .B custspeed[=true|false]
 Allow/don't allow setting of custom baud rates.  Ignored if custom
 baud rates are not supported.  Normally only standard baud rates are
